# agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  smoke_test.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
benchmarks/: __init__.py  coverage_benchmark.py  retrieval_benchmark.py
configs/: baselines.yaml  models.yaml  search_weights.yaml
dcs/: __init__.py  assembler.py  cli.py  client.py  codemap.py  critic.py  decomposer.py  executor.py  faithfulness.py  lmstudio_context.py  optimizer.py  pipeline.py  planner.py  router.py  types.py
docs/: agent-architecture-v2.md  benchmarking.md  execution-plan.md
eval/: metrics.py  runner.py
eval/tasks/coding/: embedding_service.yaml  event_bus.yaml  mcp_tools.yaml  resource_governor.yaml  search_engine.yaml
eval/tasks/qa/: daemon_architecture.yaml  hybrid_search.yaml  knowledge_graph.yaml  mcp_protocol.yaml  storage_model.yaml
tests/: test_benchmark_controls.py  test_benchmark_modules.py  test_cli.py  test_client_grep_structured.py  test_client_retrieval_filters.py  test_decomposer_controls.py  test_eval_metrics_best_iteration.py  test_eval_metrics_more.py  test_eval_runner_extended.py  test_eval_runner_pass_logic.py  test_executor_overflow.py  test_executor_prompt_contract.py  test_faithfulness.py  test_pipeline_chunk_filtering.py  test_pipeline_context_profile.py  test_planner_graph_followups.py  test_router.py
